--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>haushaltsbuch-abfrage</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <name>${project.artifactId}-${project.version}</name>
 
     <properties>
