--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -177,8 +177,9 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
-            <scope>compile</scope>
+            <scope>provided</scope>
             <version>3.6.13.Final</version>
+
         </dependency>
         <dependency>
             <groupId>org.wildfly.swarm</groupId>
