--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -358,6 +358,7 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
+
                     <execution>
                         <id>add-source</id>
                         <phase>generate-sources</phase>
@@ -391,13 +392,21 @@
                 </executions>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemProperties>
+                        <com.github.haschi.testebene>domäne</com.github.haschi.testebene>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
                     <systemPropertyVariables>
-                        <com.github.haschi.testebene>domäne</com.github.haschi.testebene>
+                        <com.github.haschi.testebene>api</com.github.haschi.testebene>
                         <phantomjs.binary.version>2.1.1</phantomjs.binary.version>
                         <org.apache.maven.user-settings>${session.request.userSettingsFile.path}
                         </org.apache.maven.user-settings>
