Ein nichtssagender ReST Test

--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -266,6 +266,19 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>info.cukes</groupId>-->
             <!--<artifactId>cucumber-guice</artifactId>-->
