--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -107,9 +107,9 @@
     <dependencies>
 
         <dependency>
-            <groupId>dom4j</groupId>
+            <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
-            <version>RELEASE</version>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.github.haschi</groupId>
