--- a/haushaltsbuch-abfrage/pom.xml
+++ b/haushaltsbuch-abfrage/pom.xml
@@ -56,6 +56,13 @@
                 <artifactId>axon-distributed-commandbus-jgroups</artifactId>
                 <version>${axon.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.axonframework</groupId>
+                <artifactId>axon-mongo</artifactId>
+                <version>${axon.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.github.haschi</groupId>
                 <artifactId>modeling</artifactId>
@@ -111,6 +118,11 @@
         <dependency>
             <groupId>org.axonframework</groupId>
             <artifactId>axon-distributed-commandbus-jgroups</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.axonframework</groupId>
+            <artifactId>axon-mongo</artifactId>
         </dependency>
 
         <!-- Java EE 7 dependency -->
@@ -271,7 +283,13 @@
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>1.10</version>
                 </plugin>
+                <plugin>
+                    <groupId>io.fabric8</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <version>0.21.0</version>
+                </plugin>
             </plugins>
+
         </pluginManagement>
 
         <finalName>demo2</finalName>
@@ -370,6 +388,38 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>start</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                        <configuration>
+                            <images>
+                            <image>
+                                <name>mongo</name>
+                                <run>
+                                    <ports>
+                                        <port>27017:27017</port>
+                                    </ports>
+                                </run>
+                            </image>
+                            </images>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
